--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <!--<img src="images/homepage/juice.jpg" alt="dining people">-->
             <div class="carousel-caption">
               <h2> Welcome to HomeFood Resaurant</h2>
-              <p>Firmly commited to your well-being in our care</p>
+              <p>Book or Order anything of your choice</p>
               <a type="button" href="#reservation" class="btn btn-danger  title-button"> Order Now </a>
               <a type="button" href="#menu" class="btn btn-warning  title-button"> Read More </a>
 
