--- a/index.html
+++ b/index.html
@@ -23,12 +23,42 @@
   <link rel="stylesheet" href="css/index.css">
   <title>HomesFood Restaurant </title>
   <link rel="icon" type="images/png" sizes="16x16" href="images\logo\mylogo.png">
+  <!-- Messenger Chat plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "2310611745671546");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v12.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+  
 </head>
 
 <body>
 
   <section id="header">
-
 
     <nav class="navbar  navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href=""> <img class="nav-img" src="images\logo\final.png"></a>
