--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link nav-highlight bg-color active" href="#contact">Help Center</a>
+            <a class="nav-link nav-highlight bg-color active" onclick="showmessanger()" >Help Center</a>
           </li>
         </ul>
       </div>
